src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Estimated_Power_Use__c</fullName>
        <description>What is the customer&apos;s estimated power use?</description>
        <inlineHelpText>What is the customer&apos;s estimated power use?</inlineHelpText>
        <label>Estimated Power Use</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;25kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-25 kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;5kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$1000/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500-1000/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200-500/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100-$200/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$100/month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_September_kWh__c</fullName>
        <description>Estimated September kWh</description>
        <inlineHelpText>Estimated September kWh</inlineHelpText>
        <label>Estimated September kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Site_Quality__c</fullName>
        <description>What is the customer&apos;s estimated site quality?</description>
        <inlineHelpText>What is the customer&apos;s estimated site quality?</inlineHelpText>
        <label>Estimated Site Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Ideal/South-No shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good/Not south-No Shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair / Some shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor/Definite Shade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_System_Size__c</fullName>
        <description>What is the estimated system size?</description>
        <inlineHelpText>What is the estimated system size?</inlineHelpText>
        <label>Estimated System Size</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;20 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-20 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;4 kW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Annual_kWh__c</fullName>
        <description>Estimated Total Annual kWh</description>
        <inlineHelpText>Estimated Total Annual kWh</inlineHelpText>
        <label>Estimated Total Annual kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Sales_Available__c</fullName>
        <description>Field Sales Consultant Availability for Opportunity Assignment</description>
        <formula>CASE(State,&quot;NJ&quot;, 
CASE( QAS_County__c , &quot;Hunterdon&quot;,&quot;Anthony Schiavino&quot;,
&quot;Somerset&quot;,&quot;Anthony Schiavino, Kevin Scialabba&quot;,
&quot;Union&quot;,&quot;Anthony Schiavino, Kevin Scialabba&quot;,
&quot;Essex&quot;,&quot;Anthony Schiavino&quot;,
&quot;Morris&quot;,&quot;Anthony Schiavino&quot;,
&quot;Warren&quot;,&quot;Anthony Schiavino&quot;,
&quot;Bergen&quot;,&quot;Anthony Schiavino&quot;,
&quot;Passaic&quot;,&quot;Anthony Schiavino&quot;,
&quot;Sussex&quot;,&quot;Anthony Schiavino&quot;,
&quot;Mercer&quot;,&quot;Kevin Scialabba&quot;,
&quot;Middlesex&quot;,&quot;Kevin Scialabba&quot;,
&quot;Monmouth&quot;,&quot;Kevin Scialabba&quot;,
&quot;Burlington&quot;,&quot;Kevin Scialabba, Peter Dunne, Glenn Massamillo&quot;,
&quot;Ocean&quot;,&quot;Kevin Scialabba, Peter Dunne, Glenn Massamillo&quot;,
&quot;Camden&quot;,&quot;Peter Dunne, Glenn Massamillo&quot;,
&quot;Atlantic&quot;,&quot;Peter Dunne, Glenn Massamillo&quot;,
&quot;Gloucester&quot;,&quot;Peter Dunne, Glenn Massamillo&quot;,
&quot;Salem&quot;,&quot;Peter Dunne, Glenn Massamillo&quot;,
&quot;Cumberland&quot;,&quot;Peter Dunne, Glenn Massamillo&quot;,
&quot;Cape May&quot;,&quot;Peter Dunne, Glenn Massamillo&quot;,&quot;&quot;),
&quot;MA&quot;,
CASE( QAS_County__c , &quot;Worcester&quot;,&quot;Rob McLaughlin, Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;Middlesex&quot;,&quot;Rob McLaughlin, Steve Cornell, Doug Telepman, Troy Herrod&quot;,
&quot;Essex&quot;,&quot;Rob McLaughlin, Steve Cornell&quot;,
&quot;Suffolk&quot;,&quot;Rob McLaughlin, Steve Cornell&quot;,
&quot;Norfolk&quot;,&quot;Rob McLaughlin, Steve Cornell, Doug Telepman, Troy Herrod&quot;,
&quot;Bristol&quot;,&quot;Rob McLaughlin, Kevin Kristofeld&quot;,
&quot;Plymouth&quot;,&quot;Rob McLaughlin, Steve Cornell, Troy Herrod&quot;,
&quot;Barnstable&quot;,&quot;Rob McLaughlin, Steve Cornell&quot;,
&quot;Franklin&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;Hampshire&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;Hampden&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;Berkshire&quot;,&quot;Kevin Kristofeld&quot;,&quot;&quot;),
&quot;CT&quot;,
CASE( QAS_County__c , &quot;Tolland&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;Windham&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;New London&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,
&quot;Hartford&quot;,&quot;Doug Telepman, Troy Herrod, Kevin Kristofeld&quot;,&quot;&quot;),
&quot;&quot;)</formula>
        <inlineHelpText>Field Sales Consultant Availability for Opportunity Assignment</inlineHelpText>
        <label>Field Sales Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Plan_1BOG__c</fullName>
        <label>Financing Plan (1BOG)</label>
        <picklist>
            <picklistValues>
                <fullName>I&apos;ll probably pay cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;ll use home equity financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I want to lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Purchase Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <description>Does the customer need financing?</description>
        <inlineHelpText>Does the customer need financing?</inlineHelpText>
        <label>Financing</label>
        <picklist>
            <controllingField>Own_vs_Lease__c</controllingField>
            <picklistValues>
                <fullName>Needs Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Need/No Mention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Click Id</description>
        <inlineHelpText>Google Click Id</inlineHelpText>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opt out of ALL solicitation.</description>
        <inlineHelpText>Opt out of ALL solicitation.</inlineHelpText>
        <label>Global Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Going_Solar_Reason__c</fullName>
        <description>What is the customer&apos;s reason for going solar?</description>
        <inlineHelpText>What is the customer&apos;s reason for going solar?</inlineHelpText>
        <label>Going Solar Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Control/Reduce Utility Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Independence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Value Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green/Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stick it to the Man</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gold_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gold Lead (1BOG)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_Mount_Interest__c</fullName>
        <inlineHelpText>Is the customer interested in a ground mount installation?</inlineHelpText>
        <label>Ground Mount Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Owner__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Property Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Lead is Included As Part of the May 2011 Inside Sales Study</description>
        <inlineHelpText>This Lead is Included As Part of the May 2011 Inside Sales Study</inlineHelpText>
        <label>Inside Sales Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Level__c</fullName>
        <description>What is the customer&apos;s interest level?</description>
        <inlineHelpText>What is the customer&apos;s interest level?</inlineHelpText>
        <label>Interest Level</label>
        <picklist>
            <picklistValues>
                <fullName>Ready to Buy Right Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants to Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Starting to Look</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Sales_Notes__c</fullName>
        <label>Internal Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>Custom field that contains a copy of the CreatedDate</description>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Exists__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Form_URL__c</fullName>
        <description>Employee Landing Page URL</description>
        <inlineHelpText>Employee Landing Page URL</inlineHelpText>
        <label>Lead Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <description>Inside Sales Lead Score</description>
        <inlineHelpText>Inside Sales Lead Score</inlineHelpText>
        <label>Lead Quality</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Alert__c</fullName>
        <description>Lead Source Alert Message</description>
        <formula>IF( ISPICKVAL( LeadSource , &apos;Unknown&apos;),&apos;Lead Source UNKNOWN - ASK CUSTOMER how they found us&apos;,&apos;&apos;)</formula>
        <inlineHelpText>Lead Source Alert Message</inlineHelpText>
        <label>Lead Source Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_1__c</fullName>
        <description>Lead Source Detail 1</description>
        <inlineHelpText>Lead Source Detail 1</inlineHelpText>
        <label>Lead Source Detail 1</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooler Planet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calfinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geostellar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Genesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bright Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarWorld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1BOG Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvassing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory/Listing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_2__c</fullName>
        <description>Lead Source Detail 2</description>
        <inlineHelpText>Lead Source Detail 2</inlineHelpText>
        <label>Lead Source Detail 2</label>
        <picklist>
            <picklistValues>
                <fullName>Ari Silver-Isenstadt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article/Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer (Self)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donald Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Cardin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mt. Pleasant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rawat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rochelle Bartolomei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russ Prechtl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Self Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelley Cohen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_3__c</fullName>
        <description>Lead Source Detail 3</description>
        <inlineHelpText>Lead Source Detail 3</inlineHelpText>
        <label>Lead Source Detail 3</label>
        <picklist>
            <controllingField>Lead_Source_Detail_2__c</controllingField>
            <picklistValues>
                <fullName>1BOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annapolis Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGEHOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branford Village</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightCurrent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalFinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Region Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NJ Super Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NY Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central OH Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CleanEnergyExperts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CleanEnergyQuotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Great Big Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooler Planet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cranberry Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>1BOG Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MySolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addition 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addition 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdMediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airtron (DES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie&apos;s List 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie&apos;s List 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie’s List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum AXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaltimoreM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Magazine 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Sun 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beacon Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Franklin (DES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda Magazine 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BostonM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BostonM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Magazine 1</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_New__c</fullName>
        <label>Lead Source (New)</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Energy Solar Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Preferred Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Article/Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Referral Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postcard/Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio/TV Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show Exhibit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNKNOWN - NEED MORE INFO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Notes__c</fullName>
        <label>Lead Source Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Competition_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status, &quot;Lost – Competition&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost – Competition Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Influencer_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status, &quot;Marketing - Influencer&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing - Influencer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <inlineHelpText>Email field includes Jotforms, emails to info@astrumsolar.com, and any other emails or digital correspondence sent to Astrum ASIDE FROM CALCULATOR SUBMISSIONS.</inlineHelpText>
        <label>Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Astrum Web Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Lead Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill__c</fullName>
        <label>Monthly Electric Bill</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Lead is For a New Construction Project NOT an Existing Building</description>
        <inlineHelpText>This Lead is For a New Construction Project NOT an Existing Building</inlineHelpText>
        <label>New Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODM_Email__c</fullName>
        <inlineHelpText>Other Decision Maker Email Address</inlineHelpText>
        <label>ODM Email</label>
        <type>Email</type>
    </fields>
</CustomObject>